--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 margin: 0 0 20px 0;
             }
         }
+        html {
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 <body>
