--- a/webapp.html
+++ b/webapp.html
@@ -5,28 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Application with ASP.Net Core</title>
     <link rel="stylesheet" href="style.css">
-    <script>
-        function openModal(imageSrc) {
-            const modal = document.getElementById('imageModal');
-            const modalImage = document.getElementById('modalImage');
-    
-            modal.style.display = 'flex'; // Show modal
-            modalImage.src = imageSrc; // Set modal image source
-        }
-    
-        function closeModal() {
-            const modal = document.getElementById('imageModal');
-            modal.style.display = 'none'; // Hide modal
-        }
-    </script>
     <style>
+        /* Center and limit content width */
+        .container {
+            width: 90%;
+            max-width: 800px;
+            margin: 2rem auto; /* Center horizontally */
+            background: #ffffff;
+            padding: 2rem;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            border: 2px solid #004080;
+            border-radius: 10px;
+            -webkit-text-fill-color: #004080;
+        }
+
         /* Gallery styles */
         .gallery {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 15px;
-            max-width: 1200px;
-            margin: 0 auto;
         }
 
         .gallery img {
@@ -41,14 +38,14 @@
 
         /* Modal styles */
         .modal {
-            display: none; /* Hidden by default */
+            display: none;
             position: fixed;
             z-index: 1000;
-            top: 0;
-            left: 0;
+            top: 40px;
+            right : 20px;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8); /* Black background with transparency */
+            background-color: rgba(0, 0, 0, 0.8);
             justify-content: center;
             align-items: center;
         }
@@ -62,42 +59,43 @@
         }
 
         .close {
-            position: absolute;
-            top: 20px;
-            right: 40px;
-            color: white;
-            font-size: 2rem;
-            font-weight: bold;
-            cursor: pointer;
+        position: absolute;
+        top: 50px; /* Original top (10px) + 40px */
+        right: 50px; /* Original right (10px) + 20px */
+        font-size: 1.4rem;
+        font-weight: bold;
+        color: white;
+        background-color: rgba(255, 255, 255, 0.783);
+        border: none;
+        border-radius: 5px;
+        width: 35px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        transition: background-color 0.3s ease;
         }
 
         .close:hover {
-            color: #ff0000;
+            background-color: rgba(255, 255, 255, 0.509);
         }
 
-        /* Dark blue text for headings */
-        h2 {
-            color: #004080;
-        }
+    .modal-content {
+        position: relative; /* Ensures the close button is aligned relative to the image */
+    }
 
-        h3 {
-            color: #004080;
-        }
-
-        p {
-            color: #004080;
-        }
-
-        ul, li {
+        h2, h3, p, ul, li {
             color: #004080;
         }
     </style>
 </head>
 <body>
-    <header>
+    <header class="container">
         <h1>Web Application with ASP.Net Core</h1>
     </header>
-    <main>
+    <main class="container">
         <section>
             <h2>About the Project</h2>
             <p>This project is a robust <strong>Food Management Web Application</strong> built using <strong>ASP.Net Core</strong>. It streamlines food-related data management, featuring <strong>real-time error handling</strong>, <strong>secure authentication</strong>, and <strong>advanced filtering capabilities</strong>. The application is designed to prioritize <strong>scalability</strong>, <strong>reliability</strong>, and <strong>user experience</strong>.</p>
@@ -106,7 +104,6 @@
         <section>
             <h2>Gallery</h2>
             <div class="gallery">
-                <!-- Simplified 'onclick' to avoid redundancy -->
                 <img src="images/webapp1.png" alt="Web Application Screenshot 1" onclick="openModal(this.src)">
                 <img src="images/webapp2.png" alt="Web Application Screenshot 2" onclick="openModal(this.src)">
                 <img src="images/webapp3.png" alt="Web Application Screenshot 3" onclick="openModal(this.src)">
@@ -116,7 +113,7 @@
                 <img src="images/webapp7.png" alt="Web Application Screenshot 7" onclick="openModal(this.src)">
                 <img src="images/webapp8.png" alt="Web Application Screenshot 8" onclick="openModal(this.src)">
             </div>
-            <!-- Modal for larger images -->
+            <!-- Modal -->
             <div id="imageModal" class="modal">
                 <span class="close" onclick="closeModal()">&times;</span>
                 <img class="modal-content" id="modalImage" alt="Large view of the image">
@@ -124,95 +121,27 @@
         </section>
 
         <section>
-            <h2>Detailed Project Description  <a href="https://github.com/mouhamad5210/WebApp.git" target="_blank"> GitHub
-            </a></h2>
-            <h3>Key Features and Modules</h3>
-            <ul>
-                <li>
-                    <strong>Authentication and User Management:</strong>
-                    <ul>
-                        <li>Utilized <strong>scaffolding</strong> for authentication, enabling secure user sign-up and login functionalities.</li>
-                        <li>Integrated a <strong>role-based access control system</strong> for fine-grained permissions and data security.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Food Items Management:</strong>
-                    <ul>
-                        <li>Implemented a comprehensive module for managing food items, allowing <strong>CRUD operations</strong> (Create, Read, Update, Delete).</li>
-                        <li>Developed filters to search food items by attributes like energy, fat, protein, and other nutritional values.</li>
-                        <li>Designed a dynamic user interface with dropdowns populated by food groups for ease of data entry and filtering.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Product Management:</strong>
-                    <ul>
-                        <li>Built a detailed product module, linking food items with companies.</li>
-                        <li>Enabled filtering of products based on nutritional values (e.g., energy, fat, carbohydrates, sodium) and company affiliation.</li>
-                        <li>Implemented company-specific views for streamlined management.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Real-time Error Handling:</strong>
-                    <ul>
-                        <li>Integrated <strong>Serilog</strong> for real-time logging and error monitoring.</li>
-                        <li>Captured application errors and performance data to improve system reliability and debugging efficiency.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Database and Data Persistence:</strong>
-                    <ul>
-                        <li>Designed a normalized database schema using <strong>Entity Framework Core</strong>.</li>
-                        <li>Applied <strong>migrations</strong> for version-controlled database updates, ensuring a smooth development process.</li>
-                        <li>Introduced <strong>table relationships</strong> and navigation properties for seamless data handling.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>User-friendly Frontend:</strong>
-                    <ul>
-                        <li>Designed an intuitive interface using <strong>Razor Pages</strong>.</li>
-                        <li>Provided user-friendly forms for food item and product management with <strong>inline validation</strong>.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Unit Testing and Reliability:</strong>
-                    <ul>
-                        <li>Followed the <strong>AAA (Arrange, Act, Assert)</strong> model for unit testing key components such as controllers and services.</li>
-                        <li>Ensured code quality and system reliability through automated tests.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Session Management:</strong>
-                    <ul>
-                        <li>Developed session helpers to manage user-specific data like company affiliation, enhancing the user experience.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Advanced Filtering and Navigation:</strong>
-                    <ul>
-                        <li>Implemented advanced <strong>search</strong> and <strong>filter functionalities</strong> for food items and products, enabling users to retrieve data based on specific criteria.</li>
-                        <li>Optimized performance for large datasets with <strong>repository patterns</strong> and asynchronous calls.</li>
-                    </ul>
-                </li>
-            </ul>
-
-            <h3>Technical Highlights</h3>
-            <ul>
-                <li><strong>Frameworks and Libraries:</strong> ASP.Net Core, Entity Framework Core, Serilog.</li>
-                <li><strong>Testing Tools:</strong> XUnit for unit testing, Moq for mocking dependencies during tests.</li>
-                <li><strong>Database:</strong> SQLite, with migrations for schema management.</li>
-                <li><strong>Frontend Technologies:</strong> Razor Pages and Bootstrap for responsive UI design. JavaScript and jQuery for client-side interactivity.</li>
-                <li><strong>Scalability:</strong> Modular architecture for easy maintenance and feature expansion.</li>
-            </ul>
-
-            <h3>Impact and Benefits</h3>
-            <p>This application delivers a <strong>secure</strong>, <strong>user-friendly</strong>, and <strong>reliable</strong> solution for managing food-related data, showcasing skills in <strong>full-stack development</strong> and system reliability.</p>
+            <h2>Detailed Project Description</h2>
+            <p><a href="https://github.com/mouhamad5210/WebApp.git" target="_blank">GitHub Repository</a></p>
         </section>
+    </main>
+    <footer class="container">
+        <p>&copy; 2024 Mohamad Redwan</p>
+    </footer>
 
-        <section>
-            <h2>GitHub Repository</h2>
-            <p>
-                <a href="https://github.com/mouhamad5210/aspnetcore-webapp" target="_blank">
-                    View Source Code on GitHub
-                </a>
-            </p>
-        </section>
+    <script>
+        function openModal(imageSrc) {
+            const modal = document.getElementById('imageModal');
+            const modalImage = document.getElementById('modalImage');
+
+            modal.style.display = 'flex';
+            modalImage.src = imageSrc;
+        }
+
+        function closeModal() {
+            const modal = document.getElementById('imageModal');
+            modal.style.display = 'none';
+        }
+    </script>
+</body>
+</html>
