--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamad Redwan | Portfolio</title>
     <style>
+        html {
+            scroll-behavior: smooth; /* Enables smooth scrolling */
+        }
         /* General styles */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -93,9 +96,10 @@
         .photo-wrapper img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover; /* Ensures the photo fills the frame */
+            object-position: center top; /* Adjusts the position of the image within the frame */
+            transform: translate(-5px, 7px); /* Moves the image down by 10px */
         }
-
         .about-content p {
             flex: 1;
             text-align: justify;
