fixing some bugs

--- a/webapp.html
+++ b/webapp.html
@@ -41,10 +41,10 @@
             justify-content: center; /* Center horizontally */
             align-items: center; /* Center vertically */
             height: 20vh; /* Adjust height as needed */
-            background-color: #004080; /* Optional: Add a background color */
+            background-color: #ecf0f3; /* Optional: Add a background color */
             color: white; /* Optional: Change the text color */
             text-align: center;
-            margin: 0; /* Remove default margin */
+            margin: 2; /* Remove default margin */
             padding: 1rem; /* Add padding if needed */
             font-size: 1.8rem; /* Adjust the font size */
             border-radius: 10px; /* Optional: Add rounded corners */
