--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohamad  | Portfolio</title>
+    <title>Mohamad Redwan | Portfolio</title>
     <link rel="stylesheet" href= "style.css">
     <style>
         html {
@@ -220,7 +220,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Mohamad</h1>
+            <h1>Mohamad Redwan</h1>
             <p>IT Engineer Student | Programmer | Web Developer</p>
             <nav>
                 <a href="#about">About</a>
