--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Mohamad Redwan</h1>
+            <h1>Mohamad </h1>
             <p>IT Engineer Student | Programmer | Web Developer</p>
             <nav>
                 <a href="#about">About</a>
