--- a/myshop.html
+++ b/myshop.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Application with ASP.Net Core</title>
+    <title>My_Shop Web Application</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Web Application with ASP.Net Core</h1>
+    <header class="container">
+        <h1>My_Shop Web Application</h1>
     </header>
-    
-    <main>
+
+    <main class="container">
         <section>
             <h2>About the Project</h2>
-            <p>This project involved developing a robust web application using ASP.Net Core. The app focuses on real-time error handling, authentication, and API integrations.</p>
+            <p>This project involved developing a robust web application using ASP.Net Core, C#, CSHTML, HTML, React, and SQLite. The app focuses on real-time error handling, authentication, and API integrations.</p>
             <ul>
                 <li>Used scaffolding for authentication to streamline development.</li>
                 <li>Implemented Serilog for robust error handling and performance monitoring.</li>
@@ -22,14 +22,24 @@
                 <li>Focused on stability and reliability by isolating application behaviors.</li>
             </ul>
         </section>
+        
         <section>
             <h2>Gallery</h2>
-            <img src="webapp1.png" alt="Screenshot 1 of Web Application">
-            <img src="webapp2.png" alt="Screenshot 2 of Web Application">
+            <div class="gallery">
+                <img src="webapp1.png" alt="Screenshot 1 of Web Application" onclick="openModal(this);">
+                <img src="webapp2.png" alt="Screenshot 2 of Web Application" onclick="openModal(this);">
+                </div>
         </section>
     </main>
+
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
+    </div>
+
     <footer>
         <p><a href="index.html">Back to Portfolio</a></p>
     </footer>
-</body>
+
+    <script src="script.js"></script> </body>
 </html>
