--- a/myshop.html
+++ b/myshop.html
@@ -3,32 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My_Shop Web Application</title>
+    <title>My Shop Web Application</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="container">
-        <h1>My_Shop Web Application</h1>
+    <header>
+        <h1>TESTING -- Dette er MyShop-siden</h1>
     </header>
-
+    
     <main class="container">
         <section>
             <h2>About the Project</h2>
-            <p>This project involved developing a robust web application using ASP.Net Core, C#, CSHTML, HTML, React, and SQLite. The app focuses on real-time error handling, authentication, and API integrations.</p>
+            <p>This project involved developing a complete web application using ASP.NET Core, C#, CSHTML, HTML, React, and SQLite. The app focuses on real-time error handling, authentication, and API integrations.</p>
             <ul>
-                <li>Used scaffolding for authentication to streamline development.</li>
-                <li>Implemented Serilog for robust error handling and performance monitoring.</li>
-                <li>Utilized AAA (Arrange, Act, Assert) model for thorough testing.</li>
-                <li>Focused on stability and reliability by isolating application behaviors.</li>
+                <li>Integrated Serilog for logging and error tracking, ensuring robust system performance.</li>
+                <li>Applied the AAA model to conduct comprehensive testing and verify functionalities.</li>
             </ul>
         </section>
         
         <section>
             <h2>Gallery</h2>
             <div class="gallery">
-                <img src="webapp1.png" alt="Screenshot 1 of Web Application" onclick="openModal(this);">
-                <img src="webapp2.png" alt="Screenshot 2 of Web Application" onclick="openModal(this);">
-                </div>
+                <img src="images/webapp1.png" alt="Screenshot 1 of Web Application">
+                <img src="images/webapp2.png" alt="Screenshot 2 of Web Application">
+                <img src="images/webapp3.png" alt="Screenshot 3 of Web Application">
+            </div>
         </section>
     </main>
 
@@ -41,5 +40,6 @@
         <p><a href="index.html">Back to Portfolio</a></p>
     </footer>
 
-    <script src="script.js"></script> </body>
+    <script src="script.js"></script>
+</body>
 </html>
