--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamad Redwan | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         html {
             scroll-behavior: smooth; /* Enables smooth scrolling */
