fix for mobile view

--- a/webapp.html
+++ b/webapp.html
@@ -9,7 +9,7 @@
 <body>
     <header class="project-header">
         <h1>Webapplikasjon med ASP.Net Core</h1>
-        <a href="index.html#projects">Tilbake til CV</a>
+        <a href="index.html#projects">Tilbake til Portefølje</a>
     </header>
 
     <main class="container">
