--- a/index.html
+++ b/index.html
@@ -90,20 +90,23 @@
 
         <section id="utdanning" class="container">
             <h2>Utdanning (Education)</h2>
-            <ul>
-                <li><strong>2024 – Present:</strong> Applied Computer Technology / OsloMet, Oslo
-                    <p>A three-year bachelor's program focused on designing and developing technological solutions emphasizing user-friendliness and universal design.</p>
-                </li>
-                <li><strong>2020 – Present:</strong> Informatics: Programming and System Architecture / UiO, Oslo
-                    <p>Specialized in modeling and maintaining complex IT systems. Covered programming, operating systems, and IT theory, focusing on secure and efficient software development.</p>
-                </li>
-                <li><strong>2024:</strong> Azure Fundamentals Certification
-                    <p>Completed an online course on fundamental concepts and services of the Azure platform.</p>
-                </li>
-                <li><strong>2009 – 2012:</strong> BioMedical Engineering / Damascus University, Syria
-                    <p>Completed 3 of 5 years, with studies on optical and infrared radiation detection, remote sensing, and signal processing.</p>
-                </li>
-            </ul>
+            
+            <div class="project">
+                <h3>2024 – Present: Applied Computer Technology / OsloMet, Oslo</h3>
+                <p>A three-year bachelor's program focused on designing and developing technological solutions emphasizing user-friendliness and universal design.</p>
+            </div>
+            <div class="project">
+                <h3>2020 – Present: Informatics: Programming and System Architecture / UiO, Oslo</h3>
+                <p>Specialized in modeling and maintaining complex IT systems. Covered programming, operating systems, and IT theory, focusing on secure and efficient software development.</p>
+            </div>
+            <div class="project">
+                <h3>2024: Azure Fundamentals Certification</h3>
+                <p>Completed an online course on fundamental concepts and services of the Azure platform.</p>
+            </div>
+            <div class="project">
+                <h3>2009 – 2012: BioMedical Engineering / Damascus University, Syria</h3>
+                <p>Completed 3 of 5 years, with studies on optical and infrared radiation detection, remote sensing, and signal processing.</p>
+            </div>
         </section>
 
         <section id="contact" class="container">
@@ -116,7 +119,7 @@
 
     <a href="#" id="scrollToTopBtn" title="Go to top">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
-            <path d="M11.9997 10.8284L7.75706 15.071L6.34285 13.6568L11.9997 8L17.6566 13.6568L16.2424 15.071L11.9997 10.8284Z"></path>
+            <path d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"></path>
         </svg>
     </a>
     
