--- a/myshop.html
+++ b/myshop.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>TESTING -- Dette er MyShop-siden</h1>
+    <header class="project-header">
+        <h1>My_Shop Web Application</h1>
+        <a href="index.html#projects">Tilbake til Portefølje</a>
     </header>
     
     <main class="container">
@@ -33,7 +34,7 @@
 
     <div id="myModal" class="modal">
         <span class="close">&times;</span>
-        <img class="modal-content" id="img01">
+        <img class="modal-content" id="modalImage">
     </div>
 
     <footer>
