--- a/surfingapp.html
+++ b/surfingapp.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Application with ASP.Net Core</title>
+    <title>Prosjekt: Surfing App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Web Application with ASP.Net Core</h1>
+    <header class="project-header">
+        <h1>Surfing App with Android Studio</h1>
+        <a href="index.html#projects">Tilbake til Portefølje</a>
     </header>
-    <main>
+
+    <main class="container">
         <section>
-            <h2>About the Project</h2>
-            <p>This project involved developing a robust web application using ASP.Net Core. The app focuses on real-time error handling, authentication, and API integrations.</p>
-            <ul>
-                <li>Used scaffolding for authentication to streamline development.</li>
-                <li>Implemented Serilog for robust error handling and performance monitoring.</li>
-                <li>Utilized AAA (Arrange, Act, Assert) model for thorough testing.</li>
-                <li>Focused on stability and reliability by isolating application behaviors.</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Gallery</h2>
-            <img src="webapp1.png" alt="Screenshot 1 of Web Application">
-            <img src="webapp2.png" alt="Screenshot 2 of Web Application">
+            <h2>Under Utvikling</h2>
+            <p>Denne nettsiden er for øyeblikket under utvikling og er ikke klar enda.</p>
         </section>
     </main>
+
     <footer>
-        <p><a href="index.html">Back to Portfolio</a></p>
+        <p>&copy; 2024 Mohamad Redwan</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
