--- a/webapp.html
+++ b/webapp.html
@@ -32,10 +32,14 @@
             </div>
         </section>
 
+        <div style="text-align: center; margin: 2.5rem 0;">
+            <a href="https://github.com/mouhamad5210/WebApp.git" target="_blank" style="background-color: #004080; color: #ffffff; padding: 15px 30px; text-decoration: none; border-radius: 8px; font-size: 1.2rem; font-weight: bold; transition: background-color 0.3s ease;">
+                Se Prosjektet på GitHub
+            </a>
+        </div>
+
         <section>
-            <h2>Detailed Project Description 
-                <a href="https://github.com/mouhamad5210/WebApp.git" target="_blank" style="font-size: 0.8rem; margin-left: 10px;">(View on GitHub)</a>
-            </h2>
+            <h2>Detailed Project Description</h2>
             <p>
                 <strong>Food_WebApp</strong> is a feature-rich web application designed to simplify food management with a focus on scalability, security, and a seamless user experience. Built using modern tools and frameworks, it offers robust solutions for real-world challenges.
             </p>
