--- a/myshop.html
+++ b/myshop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,31 +14,13 @@
     
     <main class="container">
         <section>
-            <h2>About the Project</h2>
-            <p>This project involved developing a complete web application using ASP.NET Core, C#, CSHTML, HTML, React, and SQLite. The app focuses on real-time error handling, authentication, and API integrations.</p>
-            <ul>
-                <li>Integrated Serilog for logging and error tracking, ensuring robust system performance.</li>
-                <li>Applied the AAA model to conduct comprehensive testing and verify functionalities.</li>
-            </ul>
-        </section>
-        
-        <section>
-            <h2>Gallery</h2>
-            <div class="gallery">
-                <img src="images/webapp1.png" alt="Screenshot 1 of Web Application">
-                <img src="images/webapp2.png" alt="Screenshot 2 of Web Application">
-                <img src="images/webapp3.png" alt="Screenshot 3 of Web Application">
-            </div>
+            <h2>Under Utvikling</h2>
+            <p>Denne nettsiden er for øyeblikket under utvikling og er ikke klar enda.</p>
         </section>
     </main>
 
-    <div id="myModal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="modalImage">
-    </div>
-
     <footer>
-        <p><a href="index.html">Back to Portfolio</a></p>
+        <p>&copy; 2024 Mohamad Redwan</p>
     </footer>
 
     <script src="script.js"></script>
